--- a/side2.html
+++ b/side2.html
@@ -110,18 +110,9 @@
           Verdens største pizza
          </h2>
          <p>
-            Den største pizzaen måler 1 296,72 m² og ble oppnådd av Airrack i Los Angeles, California, USA, den 19. januar 2023. Ingrediensene til denne pizzaen inkluderte 6 193 kilogram deig, 2 244 kilogram pizzasaus, 3 992 kilogram ost og omtrent 630 496 pepperoniskiver.
+            De nye rekorder kommer snart...
          </p>
-         <img src="C:/Users/Bruker/Documents/GitHub/pr-ve-webutvikling-DalbaDAYH/bilder/largest_pizza.jpg" alt="Største Pizza" width="200" height="300">
-         </div>
-         <div class="card">
-            <h2>
-             Balanser ball
-            </h2>
-            <p>
-             Lengste tid med å kontrollere en fotball med foten mens man er på taket av en bil i bevegelse. Rekorden ligger på 93 sekunder. Den ble oppnådd av Ash Randall fra Storbritannia i 2014.
-            </p>
-            <img src="C:/Users/Bruker/Documents/GitHub/pr-ve-webutvikling-DalbaDAYH/bilder/fotball.jpg" alt="Balansere ball" width="200" height="300">
+         <img src="C:/Users/Bruker/Documents/GitHub/pr-ve-webutvikling-DalbaDAYH/bilder/new_record.jpg" alt="Største Pizza" width="200" height="300">
          </div>
          <div class="sidebar">
             <button>
@@ -136,11 +127,10 @@
             <button>
              Test en rekord
             </button>
-            <img src="C:/Users/Bruker/Documents/GitHub/pr-ve-webutvikling-DalbaDAYH/bilder/guinness_ad.png" alt="Verdensrekord bok" height="150" width="auto"/>
-            <img src="C:/Users/Bruker/Documents/GitHub/pr-ve-webutvikling-DalbaDAYH/bilder/coke_ad.png" alt="Coca Cola AD" height="150" width="auto"/>
+            <img src="C:/Users/Bruker/Documents/GitHub/pr-ve-webutvikling-DalbaDAYH/bilder/Break-A-World-Record.jpg" alt="Slå verdens+rekorden" height="150" width="auto"/>
            </div>
           </div>   
-        <div class="header2"> 
+          <div class="header2"> 
             <nav>
             <a href="C:/Users/Bruker/Documents/GitHub/pr-ve-webutvikling-DalbaDAYH/index.html" style="justify-content: center;">
                 SIDE 1
